--- a/index.html
+++ b/index.html
@@ -19,14 +19,7 @@
         <div class="sidebarPlaylist">
           <h2 class="sidebarPlaylist-title">Mi Playlist <span class="btn warning">Escuchar Playlist</span> </h2>
           <ol class="myPlaylist">
-            <li class="myPlaylist-item">
-              <a href="#">
-                <span>
-                  Reasons To Choose A Notebook Over A Computer Desktop
-                </span>
-              </a>
-            </li>
-            <li class="myPlaylist-item">
+            <!-- <li class="myPlaylist-item">
               <a href="#">
                 <span>
                   Programming
@@ -81,7 +74,7 @@
                   El mundial
                 </span>
               </a>
-            </li>
+            </li> -->
           </ol>
         </div>
         <div class="sidebarPlaylist">
@@ -154,7 +147,6 @@
           </ul>
         </div>
       </div>
-
     </div>
     <div class="home-primary">
       <!-- <section class="primary"> -->
